<resources>
    <string name="app_name">Ex3</string>
    <string name="OrderSentActivityTitle">OrderSent</string>
    <string name="MainActivityTitle">Sheep order form</string>
    <string name="SelectNumOfSheep">Please select num of sheep</string>
    <string name="WithFood">With food</string>
    <string name="MakeOrder">Make order</string>
    <string name="OrderSent">Order sent</string>
    <string name="BigNumberError">Error: The number is too big to be processed</string>
    <string name="OrderSentMessage">Your order has been sent!</string>
    <string name="SelectFoodActivityTitle">Select Food</string>
    <string name="action_SendOrder">Send Order</string>
    <string name="SelectFoodButtonLabel">Select</string>
    <string name="FoodSelectionToast">Your selection was %s</string>
    <string-array name="foodArray">
        <item>Banana</item>
        <item>Apple</item>
        <item>Cherry</item>
        <item>Orange</item>
        <item>Steak</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
