<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alexbousso.ex1.activities.mainWindow.MainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainActivityTitle"
        android:textSize="30sp"
        android:id="@+id/titleTextView"
        android:layout_gravity="center_horizontal|top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SelectNumOfSheep"
            android:layout_gravity="top"
            android:id="@+id/selectSheepsTextView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="5"
            android:ems="10"
            android:id="@+id/editText" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/WithFood"
                android:id="@+id/checkBox"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/selectFoodButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SelectFoodButtonLabel" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MakeOrder"
            android:id="@+id/makeOrderButton" />

    </LinearLayout>

</FrameLayout>
